# MAI-VAS

./: README.md  pyproject.toml
.github/workflows/: jekyll.yml
mai_vas/: HELP.html  gui_main.py  gui_widgets.py  gui_worker.py  inference_mai_vas.py  mai_vas_utils.py  mammo_dataset.py  model.py  train_mai_vas.py
pages/: Gemfile  _config.yml  default.html  index.markdown
pages/_includes/: head-custom.html  head.html
pages/_posts/: 2026-03-31-welcome-to-jekyll.markdown
pages/assets/images/: Thumbs.db
